Remove comments in vars

--- a/rudder-agent/other/scripts/vars/cfengine.SunOS.3.6.1
+++ b/rudder-agent/other/scripts/vars/cfengine.SunOS.3.6.1
@@ -1,11 +1,11 @@
 OBJECTS=(
-#	"prepare"
-#	"zlib"
-#	"liblmdb"
-#	"libiconv"
-#	"libxml2"
-#	"pcre"
-#	"openssl" 
+	"prepare"
+	"zlib"
+	"liblmdb"
+	"libiconv"
+	"libxml2"
+	"pcre"
+	"openssl" 
 	"cfengine"
 )
 
